crates/compiler/semantic/tests/snapshots/diagnostics__control_flow::unreachable_code::test_unreachable_after_nested_return.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: control_flow::unreachable_code::test_unreachable_after_nested_return"
---
Fixture: semantic_tests::control_flow::unreachable_code::test_unreachable_after_nested_return
============================================================
Source code:

        fn test() -> felt {
            {
                {
                    return 42;
                }
                let unreachable = 1; // Error: unreachable code
            }
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3001] Warning: Unreachable variable declaration
   ╭─[ semantic_tests::control_flow::unreachable_code::test_unreachable_after_nested_return:7:17 ]
   │
 7 │                 let unreachable = 1; // Error: unreachable code
   │                 ──────────┬─────────  
   │                           ╰─────────── Unreachable variable declaration
───╯
