crates/compiler/semantic/tests/snapshots/diagnostics__expressions::type_errors::test_return_type_mismatch_with_function_context.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_return_type_mismatch_with_function_context"
---
Fixture: semantic_tests::expressions::type_errors::test_return_type_mismatch_with_function_context
============================================================
Source code:

        struct Point { x: felt, y: felt }

        func get_coordinate() -> felt {
            let p = Point { x: 10, y: 20 };
            return p;  // Should show function signature context
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[2001] Error: Type mismatch in return statement. Function expects 'felt', but returning 'Point'
   ╭─[ semantic_tests::expressions::type_errors::test_return_type_mismatch_with_function_context:6:13 ]
   │
 4 │         func get_coordinate() -> felt {
   │              ───────┬──────  
   │                     ╰──────── Function 'get_coordinate' declared here with return type 'felt'
   │ 
 6 │             return p;  // Should show function signature context
   │             ────┬──┬─  
   │                 ╰────── Type mismatch in return statement. Function expects 'felt', but returning 'Point'
   │                    │   
   │                    ╰─── This struct has numeric fields that could be accessed
───╯
