crates/compiler/semantic/tests/snapshots/diagnostics__expressions::type_errors::test_tuple_in_arithmetic_operation.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: expressions::type_errors::test_tuple_in_arithmetic_operation"
---
Fixture: semantic_tests::expressions::type_errors::test_tuple_in_arithmetic_operation
============================================================
Source code:

        fn test() {
            let t = (42,);
            let result = t + 10;  // Should suggest accessing with [0]
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::expressions::type_errors::test_tuple_in_arithmetic_operation:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
