crates/compiler/semantic/tests/snapshots/diagnostics__functions::return_types::test_function_missing_return_statement.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: functions::return_types::test_function_missing_return_statement"
---
Fixture: semantic_tests::functions::return_types::test_function_missing_return_statement
============================================================
Source code:

        fn test() -> felt {
            let x = 42;
            // Missing return statement
        }
    
============================================================
Found 1 diagnostic(s):

--- Diagnostic 1 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::functions::return_types::test_function_missing_return_statement:2:12 ]
   │
 2 │         fn test() -> felt {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
