crates/compiler/semantic/tests/snapshots/diagnostics__integration::test_comprehensive_error_detection.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: integration::test_comprehensive_error_detection"
---
Fixture: semantic_tests::integration::test_comprehensive_error_detection
============================================================
Source code:

        func helper(x: felt) -> felt {
            let unused = 42; // Unused variable
            return undefined_var; // Undeclared variable
        }

        func test() -> felt {
            let shadowed = 1;
            let shadowed = 2;

            let result = nonexistent_function(10); // Undeclared function
            return result;

            let unreachable = 3; // Unreachable code
        }
    
============================================================
Found 3 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::integration::test_comprehensive_error_detection:4:20 ]
   │
 4 │             return undefined_var; // Undeclared variable
   │                    ──────┬──────  
   │                          ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[1001] Error: Undeclared variable 'nonexistent_function'
    ╭─[ semantic_tests::integration::test_comprehensive_error_detection:11:26 ]
    │
 11 │             let result = nonexistent_function(10); // Undeclared function
    │                          ──────────┬─────────  
    │                                    ╰─────────── Undeclared variable 'nonexistent_function'
────╯

--- Diagnostic 3 ---
[3001] Warning: Unreachable variable declaration
    ╭─[ semantic_tests::integration::test_comprehensive_error_detection:14:13 ]
    │
 14 │             let unreachable = 3; // Unreachable code
    │             ──────────┬─────────  
    │                       ╰─────────── Unreachable variable declaration
────╯
