crates/compiler/semantic/tests/snapshots/diagnostics__integration::test_error_combination_undeclared_and_unused.snap
---
source: crates/compiler/semantic/tests/mod.rs
description: "Inline semantic validation error test: integration::test_error_combination_undeclared_and_unused"
---
Fixture: semantic_tests::integration::test_error_combination_undeclared_and_unused
============================================================
Source code:

        fn test() {
            let unused_var = 42;
            let result = undefined_var + 10;
        }
    
============================================================
Found 2 diagnostic(s):

--- Diagnostic 1 ---
[1001] Error: Undeclared variable 'undefined_var'
   ╭─[ semantic_tests::integration::test_error_combination_undeclared_and_unused:4:26 ]
   │
 4 │             let result = undefined_var + 10;
   │                          ──────┬──────  
   │                                ╰──────── Undeclared variable 'undefined_var'
───╯

--- Diagnostic 2 ---
[3002] Error: Function 'test' doesn't return on all paths
   ╭─[ semantic_tests::integration::test_error_combination_undeclared_and_unused:2:12 ]
   │
 2 │         fn test() {
   │            ──┬─  
   │              ╰─── Function 'test' doesn't return on all paths
───╯
